@@ -6,8 +6,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.authority.mapping.GrantedAuthoritiesMapper;
 import org.springframework.security.oauth2.core.user.OAuth2User;
@@ -18,7 +18,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -26,6 +25,7 @@ import java.util.Optional;
 import java.util.Set;
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
 
     @Autowired
@@ -35,33 +35,47 @@ public class SecurityConfig {
     private String frontendUrl;
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(Customizer.withDefaults())
-                // Désactive la protection CSRF pour faciliter les tests via Postman/Curl
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/pipelines/webhook", "/api/pipelines/run").permitAll() // Autoriser /run sans auth pour test
-                        .requestMatchers("/", "/index.html", "/assets/**", "/*.js", "/*.css", "/*.ico", "/*.png", "/*.svg", "/login").permitAll() // Ressources statiques
+                        // MODIFICATION ICI : Ajoutez index.html et les assets statiques
+                        .requestMatchers(
+                                "/",
+                                "/login",
+                                "/index.html",       // INDISPENSABLE pour briser la boucle
+                                "/assets/**",        // Pour les fichiers JS/CSS buildés par Vite
+                                "/*.ico",            // Favicon
+                                "/*.json",           // Manifests etc
+                                "/error",
+                                "/webjars/**",
+                                "/api/pipelines/webhook",
+                                "/api/health/**"     // Pour vérifier la santé de l'app et la BDD
+                        ).permitAll()
                         .anyRequest().authenticated()
                 )
-                .oauth2Login(oauth -> oauth
-                        .loginPage("/login") // Utiliser notre page de login React
-                        .userInfoEndpoint(userInfo -> userInfo
-                                .userAuthoritiesMapper(userAuthoritiesMapper())
-                        )
+                .oauth2Login(oauth2 -> oauth2
+                        .loginPage("/login")
                         .successHandler(successHandler())
+                        // La redirection est gérée dans successHandler (response.sendRedirect(frontendUrl))
+                )
+                .logout(logout -> logout
+                        .logoutSuccessUrl("http://localhost:8081/")
+                        .deleteCookies("JSESSIONID")
                 );
+
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000", "http://localhost:8081"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:8081", "http://localhost:3000")); // URL du Frontend
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
+        configuration.setAllowCredentials(true); // Important pour les cookies de session/OAuth2
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -70,27 +84,27 @@ public class SecurityConfig {
     @Bean
     public AuthenticationSuccessHandler successHandler() {
         return (request, response, authentication) -> {
-            OAuth2User oauthUser = (OAuth2User) authentication.getPrincipal();
-            Map<String, Object> attributes = oauthUser.getAttributes();
+            try {
+                OAuth2User oauthUser = (OAuth2User) authentication.getPrincipal();
+                Map<String, Object> attributes = oauthUser.getAttributes();
 
-            // GitHub 'login' is the username. 'email' might be null if private.
-            String login = (String) attributes.get("login");
-            String email = (String) attributes.get("email");
+                String login = (String) attributes.get("login");
+                String email = (String) attributes.get("email");
+                String githubId = attributes.get("id") != null ? String.valueOf(attributes.get("id")) : null;
+                String identifier = login != null ? login : (email != null ? email : githubId);
 
-            // Use login as the identifier to match userAuthoritiesMapper logic
-            // Fallback to email if login is somehow null
-            String identifier = (login != null) ? login : email;
+                if (identifier != null) {
+                    User user = userRepository.findByEmail(identifier).orElse(new User());
+                    user.setEmail(identifier);
+                    user.setName(login != null ? login : identifier);
+                    if (user.getRole() == null) user.setRole("DEV");
+                    userRepository.saveAndFlush(user);
+                }
 
-            if (identifier != null) {
-                User user = userRepository.findByEmail(identifier).orElse(new User());
-                user.setEmail(identifier); // Storing identifier (login) in email field
-                user.setName(login != null ? login : "Unknown");
-                if (user.getRole() == null) user.setRole("DEV"); // Rôle par défaut
-                userRepository.save(user);
+                response.sendRedirect(frontendUrl);
+            } catch (Exception e) {
+                response.sendError(500, "Erreur lors de la sauvegarde de l'utilisateur");
             }
-
-            // Redirection vers le front
-            response.sendRedirect(frontendUrl);
         };
     }
 
@@ -106,19 +120,15 @@ public class SecurityConfig {
                     // On utilise le 'login' (pseudo) comme identifiant unique qu'on mappera sur le champ 'email' de notre User.
                     String gitHubLogin = (String) attributes.get("login");
 
-                    System.out.println("🔍 Connexion GitHub : " + gitHubLogin);
-
                     // Recherche en BDD via le login
                     Optional<User> userOpt = userRepository.findByEmail(gitHubLogin);
 
                     if (userOpt.isPresent()) {
                         String role = userOpt.get().getRole();
                         mappedAuthorities.add(new SimpleGrantedAuthority(role));
-                        System.out.println("✅ Utilisateur trouvé. Rôle : "+ role);
                     } else {
                         // Rôle par défaut si pas en BDD
                         mappedAuthorities.add(new SimpleGrantedAuthority("ROLE_USER"));
-                        System.out.println("⚠️ Utilisateur inconnu en BDD -> ROLE_USER");
                     }
                 }
             });
